    experimental and likely to change in future versions. It essentially
    behaves as exams2qti12() but with some additional processing for Blackboard.

  o Added "abstention" option in schoice/mchoice questions in exams2moodle().
    This can also be set directly through an \exabstention{} tag in the
    corresponding .Rnw exercise.


Changes in Version 2.0-2

  o Added an optional transform = NULL argument in exams2pdf().
  
  o Avoid require(...) calls for suggested packages.


Changes in Version 2.0-1

  o The default encoding in exams2moodle() is now ensured to be "UTF-8" rather
    than "utf8" for improved cross-platform compatibility.

  o \exshuffle{TRUE} is now also used in read_exercise() so that schoice/mchoice
    exercises (or schoice/mchoice components in cloze exercises) are shuffled
    upon reading exercises. This facilitates static schoice/mchoice exercises.

  o New cloze type "verbatim" which is not processed further (e.g., to include
    Moodle control structures).

  o Empty questionlists for readily prepared Moodle cloze exercises can now
    be handled in exams2pdf().

  o Functions from non-imported packages (e.g., only suggested) are now always
    called with package::function to make R-devel checks happy.

  o Bug fix in processing of "duration" in exams2qti12().


Changes in Version 2.0-0

  o New version accompanying publication of exams version 2 in the
    Journal of Statistical Software, 58(1), 1-36. See
    vignette("exams2", package = "exams") for more details.

  o License extended from GPL-2 to GPL-2 | GPL-3.

  o New exams2qti21() interface for generating QTI 2.1 (rather than QTI 1.2)
    XML. So far this was only tested with the ONYX Player within
    OpenOLAT. Currently, some switches do not appear to fully work, yet,
    at least within ONYX. The function still needs further thorough
    testing and might be further improved in future versions.

  o Added verbose = FALSE option to xexams() and exams2xyz() interfaces.